--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <h1 style="text-align: center;"><strong>Restaurantvergleich</strong></h1>
     <p>&nbsp;</p>
 
-    <link href="C:\Users\robin\OneDrive - Kantonsschule Baden\Programmieren\Website_Playground\meine Website\desing\desings.css" rel="stylesheet" />
+    <link href="" rel="stylesheet" />
 
     <script>
       document.addEventListener("DOMContentLoaded", function(event) { 
