--- a/index.html
+++ b/index.html
@@ -1,64 +1,63 @@
-<!DOCTYPE html>
-<html lang="en-US">
-  <head>
-    <h1 style="text-align: center;"><strong>Restaurantvergleich</strong></h1>
-    <p>&nbsp;</p>
+<!DOCTYPE html> <html lang="en-US"> 
+  <head> 
+    <h1 style="text-align: center;"><strong>Restaurantvergleich</strong></h1> <p> </p>
 
-    <link href="" rel="stylesheet" />
+<style>
+  body {
+    background-color: #e8aea9;
+    font-family: Verdana, sans-serif;
+  }
 
-    <script>
-      document.addEventListener("DOMContentLoaded", function(event) { 
-        const dropdown = document.querySelector('select');
-        const content = document.querySelectorAll('div[id]');
-        
-        dropdown.addEventListener('change', (event) => {
-          content.forEach((element) => {
-            if (element.id === event.target.value) {
-              element.style.display = 'block';
-              picture1.style["dot nation"]="hidden";
-            } else {
-              element.style.display = 'none';
-            }
-          });
-        });
-      });
-    </script>
+  .dropdown {
+    display: flex;
+    justify-content: center;
+  }
+
+  .dropdown select {
+    width: 460px;
+    padding: 8px;
+    font-size: 20px;
+    border: 4px solid rgb(242, 112, 112);
+    background-color: rgb(242, 112, 112);
+    border-radius: 51px;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+  }
+
+  .dropdown select:focus {
+    outline: none;
+  }
+
+  .dropdown select option {
+    padding: 8px;
+  }
+
+  .dropdown select option:hover {
+    background-color: #ddd;
+  }
+</style>
+
+<link href="" rel="stylesheet" />
+
+<script>
+  document.addEventListener("DOMContentLoaded", function(event) { 
+    const dropdown = document.querySelector('select');
+    const content = document.querySelectorAll('div[id]');
     
-    <style>
-       body {
-   font-family: Verdana, sans-serif;
- }
-
- .dropdown {
-   display: flex;
-   justify-content: center;
- }
-
- .dropdown select { 
- width: 460px; 
- padding: 8px; 
- font-size:20px; 
- border: 4px solid rgb(242, 112, 112);
- background-color: rgb(242, 112, 112); 
- border-radius: 51px; 
- appearance: none; 
- -webkit-appearance: none; 
- -moz-appearance: none; }
-
- .dropdown select:focus {
-   outline: none;
- }
-
- .dropdown select option {
-   padding: 8px;
- }
-
- .dropdown select option:hover {
-   background-color: #ddd;
- }
-    </style>
-  
-  </head>
+    dropdown.addEventListener('change', (event) => {
+      content.forEach((element) => {
+        if (element.id === event.target.value) {
+          element.style.display = 'block';
+          picture1.style["dot nation"]="hidden";
+        } else {
+          element.style.display = 'none';
+        }
+      });
+    });
+  });
+</script>
+</head>
 
   <body>
 
