--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
   <head> 
     <h1 style="text-align: center;"><strong>Restaurantvergleich</strong></h1> <p> </p>
 
+
+    <link href="style.css" rel="stylesheet" />
+  
+  </head>
+
 <style>
   body {
     background-color: #e8aea9;
@@ -61,27 +66,22 @@
 
   <body>
 
-<div class="dropdown">
-  <select onchange="showText(this.value)">
-    <option value="" disabled selected>⬇️👨‍🍳  Bitte wählen sie ein Restaurant aus  👨‍🍳⬇️</option>
-    <option value="picture1">❌  Kein Restaurant gewählt</option>
-    <option value="gasthaus-zur-blume">💐  Gasthaus zur Blume</option>
-    <option value="restaurant-zum-turm">🌃  Restaurant zum Turm</option>
-    <option value="restaurant-adler">🦅  Restaurant Adler</option>
-    <option value="cafe-am-marktplatz">🧋  Cafe am Marktplatz</option>
-    <option value="restaurant-am-bach">🛶   Restaurant am Bach</option>
-    <option value="restaurant-zur-linde">🌳  Restaurant zur Linde</option>
-    <option value="restaurant-sonne">🌞  Restaurant Sonne</option>
-  </select>
-</div>
-
+    <div class="dropdown">
+      <button class="dropbtn">Dropdown</button>
+      <div class="dropdown-content">
+        <a href="#">Link 1</a>
+        <a href="#">Link 2</a>
+        <a href="#">Link 3</a>
+      </div>
+    </div>    
+    
 <style> body { border: solid 5px;} </style>
 
 <p>&nbsp;</p>
 
 <div 
 id="picture1"
-style="text-align:center;"><img src="https://i.ibb.co/DzxDbsC/2103.jpg?w=2048&amp;cmd=resize_then_crop&amp;height=1365&amp;quality=70" width="1105" height="870" 
+style="text-align:center;"><img src="https://i.ibb.co/DzxDbsC/2103.jpg?w=2048&amp;cmd=resize_then_crop&amp;height=1365&amp;quality=70" width="720"  
 /></div>
 
 <div id="gasthaus-zur-blume" style="display:none">
