--- a/index.html
+++ b/index.html
@@ -1,331 +1,23 @@
-<!DOCTYPE html> <html lang="en-US"> 
-  <head> 
-    <h1 style="text-align: center;"><strong>Restaurantvergleich</strong></h1> <p> </p>
-
-
-    <link href="style.css" rel="stylesheet" />
-  
-  </head>
-
-<style>
-  body {
-    background-color: #e8aea9;
-    font-family: Verdana, sans-serif;
-  }
-
-  .dropdown {
-    display: flex;
-    justify-content: center;
-  }
-
-  .dropdown select {
-    width: 460px;
-    padding: 8px;
-    font-size: 20px;
-    border: 4px solid rgb(242, 112, 112);
-    background-color: rgb(242, 112, 112);
-    border-radius: 51px;
-    appearance: none;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-  }
-
-  .dropdown select:focus {
-    outline: none;
-  }
-
-  .dropdown select option {
-    padding: 8px;
-  }
-
-  .dropdown select option:hover {
-    background-color: #ddd;
-  }
-</style>
-
-<link href="" rel="stylesheet" />
-
-<script>
-  document.addEventListener("DOMContentLoaded", function(event) { 
-    const dropdown = document.querySelector('select');
-    const content = document.querySelectorAll('div[id]');
-    
-    dropdown.addEventListener('change', (event) => {
-      content.forEach((element) => {
-        if (element.id === event.target.value) {
-          element.style.display = 'block';
-          picture1.style["dot nation"]="hidden";
-        } else {
-          element.style.display = 'none';
-        }
-      });
-    });
-  });
-</script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="style.css" rel="stylesheet"/>
+    <title>Restaurantvergleich</title>
 </head>
-
-  <body>
-
+<body>
+    <h1><strong>
+        Baden Restaurantvergleich
+    </strong></h1>
     <div class="dropdown">
-      <button class="dropbtn">Dropdown</button>
-      <div class="dropdown-content">
-        <a href="#">Link 1</a>
-        <a href="#">Link 2</a>
-        <a href="#">Link 3</a>
-      </div>
-    </div>    
-    
-<style> body { border: solid 5px;} </style>
-
-<p>&nbsp;</p>
-
-<div 
-id="picture1"
-style="text-align:center;"><img src="https://i.ibb.co/DzxDbsC/2103.jpg?w=2048&amp;cmd=resize_then_crop&amp;height=1365&amp;quality=70" width="720"  
-/></div>
-
-<div id="gasthaus-zur-blume" style="display:none">
-  <h2 style="text-align: center;">Gasthaus zur Blume</h2>
-  <p>&nbsp;</p>
-  <h3 style="text-align: center;">Vorspeise</h3>
-  <p style="text-align: center;">Salat 10.-</p>
-  <p style="text-align: center;">gemischter Salat 12.-</p>
-  <p style="text-align: center;">Caeser Salat 15.-</p>
-  <p>&nbsp;</p>
-  <h3 style="text-align: center;">Hauptgang</h3>
-  <p style="text-align: center;">Pizza 1 20.-</p>
-  <p style="text-align: center;">Pizza 2 21.-</p>
-  <p style="text-align: center;">Pizza 3 22.-</p>
-  <p style="text-align: center;">Pommes (Klein) 5.-</p>
-  <p style="text-align: center;">Pommes (Gross) 7.-</p>
-  <p style="text-align: center;">Schnitzel und Pommes 15.-</p>
-  <p>&nbsp;</p>
-  <h3 style="text-align: center;">Dessert</h3>
-  <p style="text-align: center;">Vanilleglace (1 Kugel) 5.-</p>
-  <p style="text-align: center;">Erdbeerglace (1 Kugel) 5.-</p>
-  <p style="text-align: center;">ChocolateGlace&nbsp;(1 Kugel) 5.-</p>
-  <p>&nbsp;</p>
-  <h3 style="text-align: center;">Getr&auml;nke</h3>
-  <p style="text-align: center;">Cola 0,3L 4.-</p>
-  <p style="text-align: center;">Cola 0,5L 5.-</p>
-  <p style="text-align: center;">Sprite 0,3L 4.-</p>
-  <p style="text-align: center;">Sprite 0,5L 5.-</p>
-  <p style="text-align: center;">Wasser 0,3L 1.-</p>
-  <p style="text-align: center;">Wasser 0,5L 3.-</p>
-  <p style="text-align: center;">Wasser 1,0L 5.-</p>
-  <p>&nbsp;</p>
-  <p style="text-align: center;">Bier 0,3L 5.-</p>
-  <p style="text-align: center;">Wein 0,5L 10.-</p>
-<p style="text-align: center;">Wein 1,0L 20.-</p>
-<h3 style="text-align: center;">&nbsp;</h3>
-</div>
-
-<div id="restaurant-zum-turm" style="display:none;">
-  <h2 style="text-align: center;">Restaurant zum Turm</h2>
-  <p>&nbsp;</p>
-  <h3 style="text-align: center;">Vorspeise</h3>
-  <p style="text-align: center;">Tomatensuppe 8.-</p>
-  <p style="text-align: center;">Kartoffelsuppe 9.-</p>
-  <p style="text-align: center;">Salat 10.-</p>
-  <p>&nbsp;</p>
-  <h3 style="text-align: center;">Hauptgang</h3>
-  <p style="text-align: center;">Pasta mit Tomatensauce 15.-</p>
-  <p style="text-align: center;">Pasta mit Pesto 16.-</p>
-  <p style="text-align: center;">Pasta Carbonara 17.-</p>
-  <p style="text-align: center;">Steak mit Pommes 25.-</p>
-  <p style="text-align: center;">Burger mit Pommes 20.-</p>
-  <p>&nbsp;</p>
-  <h3 style="text-align: center;">Dessert</h3>
-  <p style="text-align: center;">Tiramisu 8.-</p>
-  <p style="text-align: center;">Panna Cotta 7.-</p>
-  <p style="text-align: center;">Schokoladenkuchen 9.-</p>
-  <p>&nbsp;</p>
-  <h3 style="text-align: center;">Getr&auml;nke</h3>
-  <p style="text-align: center;">Cola 0,3L 4.-</p>
-  <p style="text-align: center;">Cola 0,5L 5.-</p>
-  <p style="text-align: center;">Sprite 0,3L 4.-</p>
-  <p style="text-align: center;">Sprite 0,5L 5.-</p>
-  <p style="text-align: center;">Wasser 0,3L 1.-</p>
-  <p style="text-align: center;">Wasser 0,5L 3.-</p>
-  <p style="text-align: center;">Wasser 1,0L 5.-</p>
-  <p>&nbsp;</p>
-  <p style="text-align: center;">Bier 0,3L 5.-</p>
-  <p style="text-align: center;">Bier 0,5L 7.-</p>
-</div>
-
-<div id="restaurant-adler" style="display:none;">
-  <h2 style="text-align: center;">Restaurant Adler</h2>
-  <p>&nbsp;</p>
-  <h3 style="text-align: center;">Vorspeise</h3>
-  <p style="text-align: center;">Tomatensuppe 8.-</p>
-  <p style="text-align: center;">Kartoffelsuppe 9.-</p>
-  <p style="text-align: center;">Salat 10.-</p>
-  <p style="text-align: center;">Caprese-Salat 11.-</p>
-  <p style="text-align: center;">Bruschetta 12.-</p>
-  <p>&nbsp;</p>
-  <h3 style="text-align: center;">Hauptgang</h3>
-  <p style="text-align: center;">Pasta mit Tomatensauce 15.-</p>
-  <p style="text-align: center;">Pasta mit Pesto 16.-</p>
-  <p style="text-align: center;">Pasta Carbonara 17.-</p>
-  <p style="text-align: center;">Steak mit Pommes 25.-</p>
-  <p style="text-align: center;">Burger mit Pommes 20.-</p>
-  <p style="text-align: center;">Gebratener Lachs 22.-</p>
-  <p style="text-align: center;">Gemüsequiche 18.-</p>
-  <p>&nbsp;</p>
-  <h3 style="text-align: center;">Dessert</h3>
-  <p style="text-align: center;">Tiramisu 8.-</p>
-  <p style="text-align: center;">Panna Cotta 7.-</p>
-  <p style="text-align: center;">Schokoladenkuchen 9.-</p>
-  <p style="text-align: center;">Erdbeerkuchen 8.-</p>
-  <p style="text-align: center;">Apfelstrudel 10.-</p>
-  <p>&nbsp;</p>
-  <h3 style="text-align: center;">Getr&auml;nke</h3>
-  <p style="text-align: center;">Cola 0,3L 4.-</p>
-  <p style="text-align: center;">Cola 0,5L 5.-</p>
-  <p style="text-align: center;">Sprite 0,3L 4.-</p>
-  <p style="text-align: center;">Sprite 0,5L 5.-</p>
-  <p style="text-align: center;">Wasser 0,3L 1.-</p>
-  <p style="text-align: center;">Wasser 0,5L 3.-</p>
-  <p style="text-align: center;">Wasser 1,0L 5.-</p>
-  <p>&nbsp;</p>
-  <p style="text-align: center;">Bier 0,3L 5.-</p>
-  <p style="text-align: center;">Bier 0,5L 7.-</p>
-  <p style="text-align: center;">Rotwein 0,5L 15.-</p>
-  <p style="text-align: center;">Rotwein (Flasche) 25.-</p>
-  <p style="text-align: center;">Weißwein 0,5L 14.-</p>
-  <p style="text-align: center;">Weißwein (Flasche) 24.-</p>
-</div>
-
-<div id="cafe-am-marktplatz" style="display:none;">
-  <h2 style="text-align: center;">Cafe am Marktplatz</h2>
-  <p>&nbsp;</p>
-  <h3 style="text-align: center;">Vorspeise</h3>
-  <p style="text-align: center;">Tomatensuppe 8.-</p>
-  <p style="text-align: center;">Kartoffelsuppe 9.-</p>
-  <p style="text-align: center;">Salat 10.-</p>
-  <p>&nbsp;</p>
-  <h3 style="text-align: center;">Hauptgang</h3>
-  <p style="text-align: center;">Pasta mit Tomatensauce 15.-</p>
-  <p style="text-align: center;">Pasta mit Pesto 16.-</p>
-  <p style="text-align: center;">Pasta Carbonara 17.-</p>
-  <p style="text-align: center;">Steak mit Pommes 25.-</p>
-  <p style="text-align: center;">Burger mit Pommes 20.-</p>
-  <p>&nbsp;</p>
-  <h3 style="text-align: center;">Dessert</h3>
-  <p style="text-align: center;">Tiramisu 8.-</p>
-  <p style="text-align: center;">Panna Cotta 7.-</p>
-  <p style="text-align: center;">Schokoladenkuchen 9.-</p>
-  <p>&nbsp;</p>
-  <h3 style="text-align: center;">Getr&auml;nke</h3>
-  <p style="text-align: center;">Cola 0,3L 4.-</p>
-  <p style="text-align: center;">Cola 0,5L 5.-</p>
-  <p style="text-align: center;">Sprite 0,3L 4.-</p>
-  <p style="text-align: center;">Sprite 0,5L 5.-</p>
-  <p style="text-align: center;">Wasser 0,3L 1.-</p>
-  <p style="text-align: center;">Wasser 0,5L 3.-</p>
-  <p style="text-align: center;">Wasser 1,0L 5.-</p>
-  <p>&nbsp;</p>
-  <p style="text-align: center;">Bier 0,3L 5.-</p>
-  <p style="text-align: center;">Bier 0,5L 7.-</p>
-</div>
-
-<div id="restaurant-am-bach" style="display:none;">
-  <h2 style="text-align: center;">Restaurant am Bach</h2>
-  <p>&nbsp;</p>
-  <h3 style="text-align: center;">Vorspeise</h3>
-  <p style="text-align: center;">Tomatensuppe 8.-</p>
-  <p style="text-align: center;">Kartoffelsuppe 9.-</p>
-  <p style="text-align: center;">Salat 10.-</p>
-  <p>&nbsp;</p>
-  <h3 style="text-align: center;">Hauptgang</h3>
-  <p style="text-align: center;">Pasta mit Tomatensauce 15.-</p>
-  <p style="text-align: center;">Pasta mit Pesto 16.-</p>
-  <p style="text-align: center;">Pasta Carbonara 17.-</p>
-  <p style="text-align: center;">Steak mit Pommes 25.-</p>
-  <p style="text-align: center;">Burger mit Pommes 20.-</p>
-  <p>&nbsp;</p>
-  <h3 style="text-align: center;">Dessert</h3>
-  <p style="text-align: center;">Tiramisu 8.-</p>
-  <p style="text-align: center;">Panna Cotta 7.-</p>
-  <p style="text-align: center;">Schokoladenkuchen 9.-</p>
-  <p>&nbsp;</p>
-  <h3 style="text-align: center;">Getr&auml;nke</h3>
-  <p style="text-align: center;">Cola 0,3L 4.-</p>
-  <p style="text-align: center;">Cola 0,5L 5.-</p>
-  <p style="text-align: center;">Sprite 0,3L 4.-</p>
-  <p style="text-align: center;">Sprite 0,5L 5.-</p>
-  <p style="text-align: center;">Wasser 0,3L 1.-</p>
-  <p style="text-align: center;">Wasser 0,5L 3.-</p>
-  <p style="text-align: center;">Wasser 1,0L 5.-</p>
-  <p>&nbsp;</p>
-  <p style="text-align: center;">Bier 0,3L 5.-</p>
-  <p style="text-align: center;">Bier 0,5L 7.-</p>
-</div>
-
-<div id="restaurant-zur-linde" style="display:none;">
-  <h2 style="text-align: center;">Restaurant zur Linde</h2>
-  <p>&nbsp;</p>
-  <h3 style="text-align: center;">Vorspeise</h3>
-  <p style="text-align: center;">Tomatensuppe 8.-</p>
-  <p style="text-align: center;">Kartoffelsuppe 9.-</p>
-  <p style="text-align: center;">Salat 10.-</p>
-  <p>&nbsp;</p>
-  <h3 style="text-align: center;">Hauptgang</h3>
-  <p style="text-align: center;">Pasta mit Tomatensauce 15.-</p>
-  <p style="text-align: center;">Pasta mit Pesto 16.-</p>
-  <p style="text-align: center;">Pasta Carbonara 17.-</p>
-  <p style="text-align: center;">Steak mit Pommes 25.-</p>
-  <p style="text-align: center;">Burger mit Pommes 20.-</p>
-  <p>&nbsp;</p>
-  <h3 style="text-align: center;">Dessert</h3>
-  <p style="text-align: center;">Tiramisu 8.-</p>
-  <p style="text-align: center;">Panna Cotta 7.-</p>
-  <p style="text-align: center;">Schokoladenkuchen 9.-</p>
-  <p>&nbsp;</p>
-  <h3 style="text-align: center;">Getr&auml;nke</h3>
-  <p style="text-align: center;">Cola 0,3L 4.-</p>
-  <p style="text-align: center;">Cola 0,5L 5.-</p>
-  <p style="text-align: center;">Sprite 0,3L 4.-</p>
-  <p style="text-align: center;">Sprite 0,5L 5.-</p>
-  <p style="text-align: center;">Wasser 0,3L 1.-</p>
-  <p style="text-align: center;">Wasser 0,5L 3.-</p>
-  <p style="text-align: center;">Wasser 1,0L 5.-</p>
-  <p>&nbsp;</p>
-  <p style="text-align: center;">Bier 0,3L 5.-</p>
-  <p style="text-align: center;">Bier 0,5L 7.-</p>
-</div>
-
-<div id="restaurant-sonne" style="display:none;">
-  <h2 style="text-align: center;">Restaurant Sonne</h2>
-  <p>&nbsp;</p>
-  <h3 style="text-align: center;">Vorspeise</h3>
-  <p style="text-align: center;">Tomatensuppe 8.-</p>
-  <p style="text-align: center;">Kartoffelsuppe 9.-</p>
-  <p style="text-align: center;">Salat 10.-</p>
-  <p>&nbsp;</p>
-  <h3 style="text-align: center;">Hauptgang</h3>
-  <p style="text-align: center;">Pasta mit Tomatensauce 15.-</p>
-  <p style="text-align: center;">Pasta mit Pesto 16.-</p>
-  <p style="text-align: center;">Pasta Carbonara 17.-</p>
-  <p style="text-align: center;">Steak mit Pommes 25.-</p>
-  <p style="text-align: center;">Burger mit Pommes 20.-</p>
-  <p>&nbsp;</p>
-  <h3 style="text-align: center;">Dessert</h3>
-  <p style="text-align: center;">Tiramisu 8.-</p>
-  <p style="text-align: center;">Panna Cotta 7.-</p>
-  <p style="text-align: center;">Schokoladenkuchen 9.-</p>
-  <p>&nbsp;</p>
-  <h3 style="text-align: center;">Getr&auml;nke</h3>
-  <p style="text-align: center;">Cola 0,3L 4.-</p>
-  <p style="text-align: center;">Cola 0,5L 5.-</p>
-  <p style="text-align: center;">Sprite 0,3L 4.-</p>
-  <p style="text-align: center;">Sprite 0,5L 5.-</p>
-  <p style="text-align: center;">Wasser 0,3L 1.-</p>
-  <p style="text-align: center;">Wasser 0,5L 3.-</p>
-  <p style="text-align: center;">Wasser 1,0L 5.-</p>
-  <p>&nbsp;</p>
-  <p style="text-align: center;">Bier 0,3L 5.-</p>
-  <p style="text-align: center;">Bier 0,5L 7.-</p>
-  </div>
-  </body>
+        <button class="dropbtn">Dropdown</button>
+        <div class="dropdown-content">
+          <a href="#">Link 1</a>
+          <a href="#">Link 2</a>
+          <a href="#">Link 3</a>
+        </div>
+      </div>    
+</body>
 </html>
