--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <header></header>
     <h1 style="text-align: center">Restaurantvergleich</h1>
     <p style="text-align: center">Hier gitb es die besten Restaurants</p>
-    <div class="container main" style="text-align: center">
-      <section>
+    <div class="container main">
+      <section style="text-align: center">
         <input id="s1" type="checkbox" name="t1" checked />
-        <label for="s1">Section One</label>
+        <label for="s1">Döner1</label>
         <div>
           <h2>Döner1</h2>
           <p>
@@ -41,9 +41,9 @@
           ></iframe>
         </div>
       </section>
-      <section>
+      <section style="text-align: center">
         <input id="s2" type="checkbox" name="t1" checked />
-        <label for="s2">Section One</label>
+        <label for="s2">Pizza1</label>
         <div>
           <h2>Pizza1</h2>
           <p>
@@ -69,9 +69,9 @@
           ></iframe>
         </div>
       </section>
-      <section>
+      <section style="text-align: center">
         <input id="s3" type="checkbox" name="t1" checked />
-        <label for="s3">Section One</label>
+        <label for="s3">Burger1</label>
         <div>
           <h2>Burger1</h2>
           <p>
