--- a/index.html
+++ b/index.html
@@ -14,22 +14,12 @@
     <p style="text-align: center">Hier gitb es die besten Restaurants</p>
     <div class="container main">
       <section style="text-align: center">
-        <input id="s1" type="checkbox" name="t1" checked />
+        <input id="s1" type="checkbox" name="t1" unchecked />
         <label for="s1">Döner1</label>
         <div>
           <h2>Döner1</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque ad
-            sunt veritatis sit necessitatibus explicabo quod eum, provident illo
-            odit accusamus obcaecati iusto modi hic deserunt incidunt?
-            Perspiciatis, alias minima?
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa quia
-            fugit nam non voluptatibus dolor aspernatur ea nostrum praesentium,
-            nihil rerum, eveniet laudantium dignissimos officia, voluptatem et
-            corporis maiores molestiae.
-          </p>
+          <p>LoL</p>
+          <p>LoL</p>
           <iframe
             class="maps1"
             src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d674.3037643849052!2d8.309329464991803!3d47.47546768728264!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47906cc6fcd3bc63%3A0x1b993f08c320367b!2sBal&#39;s%20Take%20Away!5e0!3m2!1sde!2sch!4v1683989647342!5m2!1sde!2sch"
@@ -43,22 +33,13 @@
         </div>
       </section>
       <section style="text-align: center">
-        <input id="s2" type="checkbox" name="t1" checked />
+        <input id="s2" type="checkbox" name="t1" unchecked />
         <label for="s2">Pizza1</label>
         <div>
           <h2>Pizza1</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque ad
-            sunt veritatis sit necessitatibus explicabo quod eum, provident illo
-            odit accusamus obcaecati iusto modi hic deserunt incidunt?
-            Perspiciatis, alias minima?
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa quia
-            fugit nam non voluptatibus dolor aspernatur ea nostrum praesentium,
-            nihil rerum, eveniet laudantium dignissimos officia, voluptatem et
-            corporis maiores molestiae.
-          </p>
+          <p>LoL</p>
+
+          <p>LoL</p>
           <iframe
             class="maps2"
             src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1456.656590472553!2d8.311319651759366!3d47.47258510670452!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47906ccf65b616a3%3A0x35043ac3b7aa3f76!2sdieci%20Pizza%20Kurier%20Baden!5e0!3m2!1sde!2sch!4v1683989599928!5m2!1sde!2sch"
@@ -72,22 +53,12 @@
         </div>
       </section>
       <section style="text-align: center">
-        <input id="s3" type="checkbox" name="t1" checked />
+        <input id="s3" type="checkbox" name="t1" unchecked />
         <label for="s3">Burger1</label>
         <div>
           <h2>Burger1</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque ad
-            sunt veritatis sit necessitatibus explicabo quod eum, provident illo
-            odit accusamus obcaecati iusto modi hic deserunt incidunt?
-            Perspiciatis, alias minima?
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa quia
-            fugit nam non voluptatibus dolor aspernatur ea nostrum praesentium,
-            nihil rerum, eveniet laudantium dignissimos officia, voluptatem et
-            corporis maiores molestiae.
-          </p>
+          <p>Lol</p>
+          <p>LoL</p>
           <iframe
             class="maps3"
             src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d674.3198531208187!2d8.307835936829406!3d47.47421608480599!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47906cc6527aa36b%3A0x40cce0cd2953cb32!2sMcDonald&#39;s%20Restaurant!5e0!3m2!1sde!2sch!4v1683989531919!5m2!1sde!2sch"
