--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             style="border: 1"
             allowfullscreen=""
             loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
+            referrerpolicy="no-referrer"
           ></iframe>
         </div>
       </section>
@@ -49,7 +49,7 @@
             style="border: 1"
             allowfullscreen=""
             loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
+            referrerpolicy="no-referrer"
           ></iframe>
         </div>
       </section>
@@ -69,7 +69,7 @@
             style="border: 1"
             allowfullscreen=""
             loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
+            referrerpolicy="no-referrer"
           ></iframe>
         </div>
       </section>
