--- a/index.html
+++ b/index.html
@@ -18,8 +18,43 @@
         <label for="s1">Döner1</label>
         <div>
           <h2>Döner1</h2>
-          <p>LoL</p>
-          <p>LoL</p>
+          <p style="text-align: center">
+            <strong>Hauptgerichte:</strong><br />
+            Döner Kebab mit Hühnchen<br />
+            Döner Teller mit Lammfleisch<br />
+            Döner Wrap mit Falafel (vegetarisch)<br />
+            Dürüm Döner mit Rindfleisch<br />
+            Döner Box mit gemischtem Fleisch (Rind und Huhn)<br /><br />
+
+            <strong>Beilagen:</strong><br />
+            Pommes frites<br />
+            Knoblauch-Kartoffeln<br />
+            Reis<br />
+            Gemischter Salat<br /><br />
+
+            <strong>Soßen:</strong><br />
+            Knoblauchsoße<br />
+            Scharfe Soße<br />
+            Joghurtsoße<br />
+            Tomatensoße<br /><br />
+
+            <strong>Extras:</strong><br />
+            Feta-Käse<br />
+            Gegrillte Paprika<br />
+            Röstzwiebeln<br />
+            Oliven<br /><br />
+
+            <strong>Getränke:</strong><br />
+            Cola<br />
+            Limonade<br />
+            Wasser<br />
+            Ayran (türkisches Joghurtgetränk)<br /><br />
+            Ich hoffe, das Menü gefällt dir! Guten Appetit!
+          </p>
+          <p></p>
+          <strong>⬇️ Das Restaurant finden Sie hier ⬇️</strong>
+          <p></p>
+
           <iframe
             class="maps1"
             src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d674.3037643849052!2d8.309329464991803!3d47.47546768728264!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47906cc6fcd3bc63%3A0x1b993f08c320367b!2sBal&#39;s%20Take%20Away!5e0!3m2!1sde!2sch!4v1683989647342!5m2!1sde!2sch"
