--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <div class="container main">
       <section style="text-align: center">
         <input id="s1" type="checkbox" name="t1" unchecked />
-        <label for="s1">Döner1</label>
+        <label for="s1">Döner</label>
         <div>
-          <h2>Döner1</h2>
+          <h2>Döner</h2>
           <p style="text-align: center">
             <strong>Hauptgerichte:</strong><br />
             Döner Kebab mit Hühnchen<br />
@@ -70,12 +70,21 @@
       <p></p>
       <section style="text-align: center">
         <input id="s2" type="checkbox" name="t1" unchecked />
-        <label for="s2">Pizza1</label>
+        <label for="s2">Pizza</label>
         <div>
-          <h2>Pizza1</h2>
-          <p>LoL</p>
-
-          <p>LoL</p>
+          <h2>Pizza</h2>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse
+            accusamus eum nam minus laborum quia nesciunt, molestiae inventore,
+            possimus asperiores vero. Harum repellendus velit dolores doloremque
+            officiis quibusdam accusamus neque?
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea
+            assumenda iusto officiis ullam. Repellat laboriosam temporibus sed
+            voluptatum? Id provident iusto voluptate suscipit ab non, quasi qui
+            quidem sit corporis.
+          </p>
           <iframe
             class="maps2"
             src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1456.656590472553!2d8.311319651759366!3d47.47258510670452!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47906ccf65b616a3%3A0x35043ac3b7aa3f76!2sdieci%20Pizza%20Kurier%20Baden!5e0!3m2!1sde!2sch!4v1683989599928!5m2!1sde!2sch"
@@ -91,11 +100,21 @@
       <p></p>
       <section style="text-align: center">
         <input id="s3" type="checkbox" name="t1" unchecked />
-        <label for="s3">Burger1</label>
+        <label for="s3">Burger</label>
         <div>
-          <h2>Burger1</h2>
-          <p>Lol</p>
-          <p>LoL</p>
+          <h2>Burger</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore
+            praesentium esse, commodi tempora quam eos, culpa voluptatem ad
+            dolores officia odit beatae eaque quaerat consequuntur doloremque
+            exercitationem voluptate provident delectus.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa
+            voluptate odit temporibus, nihil labore laboriosam quam voluptatibus
+            iste deserunt eligendi delectus animi quaerat debitis officiis non
+            sapiente esse sequi. Excepturi!
+          </p>
           <iframe
             class="maps3"
             src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d674.3198531208187!2d8.307835936829406!3d47.47421608480599!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47906cc6527aa36b%3A0x40cce0cd2953cb32!2sMcDonald&#39;s%20Restaurant!5e0!3m2!1sde!2sch!4v1683989531919!5m2!1sde!2sch"
