--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <li>
         <div>
           <a href="burger.html">
-          <img src="\media\Bouillon.jpg">
+          <img src="media\Bouillon.jpg">
           <div>
             <h3>
               Bouillon
@@ -28,7 +28,7 @@
       <li>
         <div>
           <a href="Döner.html">
-          <img src="\media\BAL's.jpg" alt="Image of the local">
+          <img src="media\BAL's.jpg" alt="Image of the local">
           <h3>
             BAL's
           </h3>
