--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
     <header></header>
     <h1 style="text-align: center">Restaurantvergleich</h1>
     <p style="text-align: center">Hier gitb es die besten Restaurants</p>
+
     <ul>
       <li>
         <div>
           <a href="burger.html">
-          <img src="media\Bouillon.jpg">
+          <img src="\media\Bouillon.jpg">
           <div>
             <h3>
               Bouillon
@@ -28,7 +29,7 @@
       <li>
         <div>
           <a href="Döner.html">
-          <img src="media\BAL's.jpg" alt="Image of the local">
+          <img src="\media\BAL's.jpg" alt="Image of the local">
           <h3>
             BAL's
           </h3>
@@ -46,6 +47,5 @@
         </div>
       </li>
     </ul>
-
   </body>
 </html>
