--- a/Döner.html
+++ b/Döner.html
@@ -9,9 +9,10 @@
     <title>Document</title>
   </head>
   <body>
+    <div>
+      <a class="backbutton" href="index.html">⬻</a>
+    </div>
     <section style="text-align: center">
-      <input id="s1" type="checkbox" name="t1" unchecked />
-      <label for="s1">Döner</label>
       <div>
         <h2>Döner</h2>
         <p style="text-align: center">
