--- a/burger.html
+++ b/burger.html
@@ -8,6 +8,9 @@
     <title>Document</title>
   </head>
   <body>
+    <div>
+      <a class="backbutton" href="index.html">⬻</a>
+    </div>
     <section style="text-align: center">
       <div>
         <h2>Burger</h2>
