--- a/index.html
+++ b/index.html
@@ -12,130 +12,12 @@
     <header></header>
     <h1 style="text-align: center">Restaurantvergleich</h1>
     <p style="text-align: center">Hier gitb es die besten Restaurants</p>
-<<<<<<< Updated upstream
-    <div class="container main">
-      <section style="text-align: center">
-        <input id="s1" type="checkbox" name="t1" unchecked />
-        <label for="s1">Döner</label>
-        <div>
-          <h2>Döner</h2>
-          <p style="text-align: center">
-            <strong>Hauptgerichte:</strong><br />
-            Döner Kebab mit Hühnchen<br />
-            Döner Teller mit Lammfleisch<br />
-            Döner Wrap mit Falafel (vegetarisch)<br />
-            Dürüm Döner mit Rindfleisch<br />
-            Döner Box mit gemischtem Fleisch (Rind und Huhn)<br /><br />
-
-            <strong>Beilagen:</strong><br />
-            Pommes frites<br />
-            Knoblauch-Kartoffeln<br />
-            Reis<br />
-            Gemischter Salat<br /><br />
-
-            <strong>Soßen:</strong><br />
-            Knoblauchsoße<br />
-            Scharfe Soße<br />
-            Joghurtsoße<br />
-            Tomatensoße<br /><br />
-
-            <strong>Extras:</strong><br />
-            Feta-Käse<br />
-            Gegrillte Paprika<br />
-            Röstzwiebeln<br />
-            Oliven<br /><br />
-
-            <strong>Getränke:</strong><br />
-            Cola<br />
-            Limonade<br />
-            Wasser<br />
-            Ayran (türkisches Joghurtgetränk)<br /><br />
-            Ich hoffe, das Menü gefällt dir! Guten Appetit!
-          </p>
-          <p></p>
-          <strong>⬇️ Das Restaurant finden Sie hier ⬇️</strong>
-          <p></p>
-
-          <iframe
-            class="maps1"
-            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d674.3037643849052!2d8.309329464991803!3d47.47546768728264!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47906cc6fcd3bc63%3A0x1b993f08c320367b!2sBal&#39;s%20Take%20Away!5e0!3m2!1sde!2sch!4v1683989647342!5m2!1sde!2sch"
-            width="1600"
-            height="450"
-            style="border: 1"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer"
-          ></iframe>
-        </div>
-      </section>
-      <p></p>
-      <section style="text-align: center">
-        <input id="s2" type="checkbox" name="t1" unchecked />
-        <label for="s2">Pizza</label>
-        <div>
-          <h2>Pizza</h2>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse
-            accusamus eum nam minus laborum quia nesciunt, molestiae inventore,
-            possimus asperiores vero. Harum repellendus velit dolores doloremque
-            officiis quibusdam accusamus neque?
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea
-            assumenda iusto officiis ullam. Repellat laboriosam temporibus sed
-            voluptatum? Id provident iusto voluptate suscipit ab non, quasi qui
-            quidem sit corporis.
-          </p>
-          <iframe
-            class="maps2"
-            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1456.656590472553!2d8.311319651759366!3d47.47258510670452!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47906ccf65b616a3%3A0x35043ac3b7aa3f76!2sdieci%20Pizza%20Kurier%20Baden!5e0!3m2!1sde!2sch!4v1683989599928!5m2!1sde!2sch"
-            width="1600"
-            height="450"
-            style="border: 1"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer"
-          ></iframe>
-        </div>
-      </section>
-      <p></p>
-      <section style="text-align: center">
-        <input id="s3" type="checkbox" name="t1" unchecked />
-        <label for="s3">Burger</label>
-        <div>
-          <h2>Burger</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore
-            praesentium esse, commodi tempora quam eos, culpa voluptatem ad
-            dolores officia odit beatae eaque quaerat consequuntur doloremque
-            exercitationem voluptate provident delectus.
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa
-            voluptate odit temporibus, nihil labore laboriosam quam voluptatibus
-            iste deserunt eligendi delectus animi quaerat debitis officiis non
-            sapiente esse sequi. Excepturi!
-          </p>
-          <iframe
-            class="maps3"
-            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d674.3198531208187!2d8.307835936829406!3d47.47421608480599!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47906cc6527aa36b%3A0x40cce0cd2953cb32!2sMcDonald&#39;s%20Restaurant!5e0!3m2!1sde!2sch!4v1683989531919!5m2!1sde!2sch"
-            width="1600"
-            height="450"
-            style="border: 1"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer"
-          ></iframe>
-        </div>
-      </section>
-    </div>
-=======
 
     <ul>
       <li>
         <div>
           <a href="burger.html">
-          <img src="\media\Bouillon.jpg">
+          <img src="media/Bouillon.jpg">
           <div>
             <h3>
               Bouillon
@@ -147,7 +29,7 @@
       <li>
         <div>
           <a href="Döner.html">
-          <img src="\media\BAL's.jpg" alt="Image of the local">
+          <img src="media/BAL's.jpg" alt="Image of the local">
           <h3>
             BAL's
           </h3>
@@ -165,7 +47,5 @@
         </div>
       </li>
     </ul>
-  
->>>>>>> Stashed changes
   </body>
 </html>
