--- a/pizza.html
+++ b/pizza.html
@@ -9,9 +9,10 @@
     <title>Document</title>
   </head>
   <body>
+    <div>
+      <a class="backbutton" href="index.html">⬻</a>
+    </div>
     <section style="text-align: center">
-      <input id="s2" type="checkbox" name="t1" unchecked />
-      <label for="s2">Pizza</label>
       <div>
         <h2>Pizza</h2>
         <p>
