--- a/Döner.html
+++ b/Döner.html
@@ -14,19 +14,19 @@
     </div>
     <section style="text-align: center">
       <div>
-        <h2>Döner</h2>
-        <p style="text-align: center">
+        <h2>Speisekarte</h2>
+        <p>
           <strong>Hauptgerichte:</strong><br />
           Döner Kebab mit Hühnchen<br />
           Döner Teller mit Lammfleisch<br />
           Döner Wrap mit Falafel (vegetarisch)<br />
           Dürüm Döner mit Rindfleisch<br />
-          Döner Box mit gemischtem Fleisch (Rind und Huhn)<br /><br />
+          Döner Box mit Rind und Huhn<br /><br />
 
           <strong>Beilagen:</strong><br />
+          Reis<br />
           Pommes frites<br />
           Knoblauch-Kartoffeln<br />
-          Reis<br />
           Gemischter Salat<br /><br />
 
           <strong>Soßen:</strong><br />
@@ -45,12 +45,18 @@
           Cola<br />
           Limonade<br />
           Wasser<br />
-          Ayran (türkisches Joghurtgetränk)<br /><br />
+          Ayran<br /><br />
+
+          <strong>Weitere Gerichte:</strong><br />
+          Lahmacun (türkische Pizza)<br />
+          Adana Kebab<br />
+          Iskender Kebab<br />
+          Vegetarischer Döner Wrap<br />
+          Lahmacun Wrap mit Hackfleisch<br /><br />
           Ich hoffe, das Menü gefällt dir! Guten Appetit!
         </p>
-        <p></p>
-        <strong>⬇️ Das Restaurant finden Sie hier ⬇️</strong>
-        <p></p>
+
+        <p><strong>⬇️ Das Restaurant finden Sie hier ⬇️</strong></p>
 
         <iframe
           class="maps1"
