--- a/burger.html
+++ b/burger.html
@@ -13,22 +13,55 @@
     </div>
     <section style="text-align: center">
       <div>
-        <h2>Burger</h2>
+        <h2>Speisekarte</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore
-          praesentium esse, commodi tempora quam eos, culpa voluptatem ad
-          dolores officia odit beatae eaque quaerat consequuntur doloremque
-          exercitationem voluptate provident delectus.
+          <strong>Vorspeisen:</strong><br />
+          Bruschetta<br />
+          Caprese Salat<br />
+          Französische Zwiebelsuppe<br /><br />
+
+          <strong>Hauptgerichte:</strong><br />
+          Klare Rinderbouillon mit Gemüse<br />
+          Hühnerbrühe mit Nudeln<br />
+          Tomatencremesuppe<br />
+          Kürbiscremesuppe<br /><br />
+
+          <strong>Beilagen:</strong><br />
+          Baguette<br />
+          Kräuterbutter<br />
+          Knusprige Croûtons<br />
+          Gruyère-Käse<br /><br />
+
+          <strong>Salate:</strong><br />
+          Gemischter grüner Salat<br />
+          Caesar Salat mit Hähnchen<br />
+          Tomate-Mozzarella Salat<br />
+          Frischer Gurkensalat<br /><br />
+
+          <strong>Eintöpfe:</strong><br />
+          Gulaschsuppe<br />
+          Linseneintopf<br />
+          Kartoffelsuppe<br />
+          Gemüseeintopf<br /><br />
+
+          <strong>Desserts:</strong><br />
+          Schokoladenkuchen<br />
+          Crème Brûlée<br />
+          Früchteplatte<br /><br />
+
+          <strong>Getränke:</strong><br />
+          Mineralwasser<br />
+          Apfelschorle<br />
+          Frischer Orangensaft<br />
+          Kräutertee<br /><br />
+          Ich hoffe, das Menü gefällt dir! Guten Appetit!
         </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa
-          voluptate odit temporibus, nihil labore laboriosam quam voluptatibus
-          iste deserunt eligendi delectus animi quaerat debitis officiis non
-          sapiente esse sequi. Excepturi!
-        </p>
+
+        <p><strong>⬇️ Das Restaurant finden Sie hier ⬇️</strong></p>
+
         <iframe
           class="maps3"
-          src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d674.3198531208187!2d8.307835936829406!3d47.47421608480599!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47906cc6527aa36b%3A0x40cce0cd2953cb32!2sMcDonald&#39;s%20Restaurant!5e0!3m2!1sde!2sch!4v1683989531919!5m2!1sde!2sch"
+          src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2696.6548913290485!2d8.3035228!3d47.4771542!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47906cb8ba7a8bdf%3A0x7e8fc55a2a963ea9!2sRestaurant%20Bouillon%20GmbH!5e0!3m2!1sde!2sch!4v1684761961843!5m2!1sde!2sch"
           width="1600"
           height="450"
           style="border: 1"
