--- a/index.html
+++ b/index.html
@@ -17,35 +17,30 @@
       <li>
         <div>
           <a href="burger.html">
-          <img src="media/Bouillon.jpg">
-          <div>
-            <h3>
-              Bouillon
-            </h3>
-          </div>
-        </a>
+            <img src="media/Bouillon.jpg" alt="" />
+            <div>
+              <h3>Bouillon</h3>
+            </div>
+          </a>
         </div>
       </li>
       <li>
         <div>
           <a href="Döner.html">
-          <img src="media/BAL's.jpg" alt="Image of the local">
-          <h3>
-            BAL's
-          </h3>
-        </a>
+            <img src="media/BAL's.jpg" alt="" />
+            <h3>BAL's</h3>
+          </a>
         </div>
       </li>
       <li>
         <div>
           <a href="pizza.html">
-            <img src="media/Dieci.jpg" alt="">
-            <h3>
-              Dieci
-            </h3>
+            <img src="media/Dieci.jpg" alt="" />
+            <h3>Dieci</h3>
           </a>
         </div>
       </li>
-    </ul>
+       
+    </ul>
   </body>
 </html>
