--- a/pizza.html
+++ b/pizza.html
@@ -14,19 +14,50 @@
     </div>
     <section style="text-align: center">
       <div>
-        <h2>Pizza</h2>
+        <h2>Speisekarte</h2>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse
-          accusamus eum nam minus laborum quia nesciunt, molestiae inventore,
-          possimus asperiores vero. Harum repellendus velit dolores doloremque
-          officiis quibusdam accusamus neque?
+          <strong>Vorspeisen:</strong><br />
+          Knoblauchbrot<br />
+          Antipasti-Teller<br />
+          Bruschetta<br /><br />
+
+          <strong>Pizzen:</strong><br />
+          Margherita<br />
+          Salami<br />
+          Prosciutto e Funghi<br />
+          Quattro Formaggi<br />
+          Vegetariana<br />
+          Diavola<br />
+          Capricciosa<br />
+          Hawaii<br /><br />
+
+          <strong>Pasta:</strong><br />
+          Spaghetti Carbonara<br />
+          Penne Arrabiata<br />
+          Lasagne al Forno<br />
+          Tagliatelle Funghi e Panna<br /><br />
+
+          <strong>Salate:</strong><br />
+          Insalata Mista<br />
+          Caprese Salat<br />
+          Caesar Salat<br />
+          Rucola-Salat mit Parmesan<br /><br />
+
+          <strong>Desserts:</strong><br />
+          Tiramisu<br />
+          Panna Cotta<br />
+          Cannoli Siciliani<br /><br />
+
+          <strong>Getränke:</strong><br />
+          Coca Cola<br />
+          Fanta<br />
+          Sprite<br />
+          Wasser<br /><br />
+          Ich hoffe, das Menü gefällt dir! Guten Appetit!
         </p>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea assumenda
-          iusto officiis ullam. Repellat laboriosam temporibus sed voluptatum?
-          Id provident iusto voluptate suscipit ab non, quasi qui quidem sit
-          corporis.
-        </p>
+
+        <p><strong>⬇️ Das Restaurant finden Sie hier ⬇️</strong></p>
+
         <iframe
           class="maps2"
           src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1456.656590472553!2d8.311319651759366!3d47.47258510670452!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47906ccf65b616a3%3A0x35043ac3b7aa3f76!2sdieci%20Pizza%20Kurier%20Baden!5e0!3m2!1sde!2sch!4v1683989599928!5m2!1sde!2sch"
