--- a/pizza.html
+++ b/pizza.html
@@ -70,5 +70,16 @@
         ></iframe>
       </div>
     </section>
+    <section style="text-align: center">
+      <h2>Rezensionen</h2>
+      <div>
+        <p id="rezensionen">
+          Sehr Gut <br />
+          Mittelmässig <br />
+          Nicht sehr Gut <br />
+          Schlecht <br />
+        </p>
+      </div>
+    </section>
   </body>
 </html>
