--- a/burger.html
+++ b/burger.html
@@ -71,5 +71,21 @@
         ></iframe>
       </div>
     </section>
+    <p></p>
+    <div class="container main">
+      <section style="text-align: center">
+        <input id="s1" type="checkbox" name="t1" unchecked />
+        <label for="s1">Rezensionen</label>
+        <div>
+          <p>
+            <h2>Rezensionen</h2>
+            Sehr Gut <br />
+            Mittelmässig <br />
+            Nicht sehr Gut <br />
+            Schlecht <br />
+          </p>
+        </div>
+      </section>
+    </div>
   </body>
 </html>
