--- a/pizza.html
+++ b/pizza.html
@@ -70,16 +70,20 @@
         ></iframe>
       </div>
     </section>
-    <section style="text-align: center">
-      <h2>Rezensionen</h2>
-      <div>
-        <p id="rezensionen">
-          Sehr Gut <br />
-          Mittelmässig <br />
-          Nicht sehr Gut <br />
-          Schlecht <br />
-        </p>
-      </div>
-    </section>
+    <div class="container main">
+      <section style="text-align: center">
+        <input id="s1" type="checkbox" name="t1" unchecked />
+        <label for="s1">Rezensionen</label>
+        <div>
+          <p>
+            <h2>Rezensionen</h2>
+            Sehr Gut <br />
+            Mittelmässig <br />
+            Nicht sehr Gut <br />
+            Schlecht <br />
+          </p>
+        </div>
+      </section>
+    </div>
   </body>
 </html>
