--- a/Döner.html
+++ b/Döner.html
@@ -78,10 +78,7 @@
         <div>
           <p>
             <h2>Rezensionen</h2>
-            Sehr Gut <br />
-            Mittelmässig <br />
-            Nicht sehr Gut <br />
-            Schlecht <br />
+            <iframe src="https://www.tripadvisor.ch/Restaurant_Review-g198855-d10794747-Reviews-Bal_s_Take_Away-Baden_Canton_of_Aargau.html" width="100%" height="500px" frameborder="0"></iframe>
           </p>
         </div>
       </section>
