--- a/pizza.html
+++ b/pizza.html
@@ -77,10 +77,7 @@
         <div>
           <p>
             <h2>Rezensionen</h2>
-            Sehr Gut <br />
-            Mittelmässig <br />
-            Nicht sehr Gut <br />
-            Schlecht <br />
+            <iframe src="https://www.tripadvisor.ch/Restaurant_Review-g198855-d14139348-Reviews-Dieci_Pizza_Baden-Baden_Canton_of_Aargau.html" width="100%" height="500px" frameborder="0"></iframe>
           </p>
         </div>
       </section>
