--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="style.css" rel="stylesheet" />
-    <script src="https://cdn.counter.dev/script.js" data-id="1e246ed6-c797-4d55-bab6-e45101a29eb4" data-utcoffset="2"></script>
+    <script
+      src="https://cdn.counter.dev/script.js"
+      data-id="1e246ed6-c797-4d55-bab6-e45101a29eb4"
+      data-utcoffset="2"
+    ></script>
     <title>Restaurantvergleich</title>
   </head>
 
