--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
     <h1 style="text-align: center">Restaurantvergleich</h1>
     <p style="text-align: center">Hier gibt es die besten Restaurants</p>
 
-    <ul style="text-align: center">
-      <input id="burgerfilter" type="checkbox" name="hallo" checked />
-      <label for="burgerfilter">Burger</label>
+    <input id="burgerfilter" type="checkbox" name="hallo" checked />
+    <label for="burgerfilter">Burger</label>
 
-      <input id="doenerfilter" type="checkbox" name="schuu" checked />
-      <label for="doenerfilter">Döner</label>
+    <input id="doenerfilter" type="checkbox" name="schuu" checked />
+    <label for="doenerfilter">Döner</label>
 
-      <input id="pizzafilter" type="checkbox" name="lesgoo" checked />
-      <label for="pizzafilter">Pizza</label>
+    <input id="pizzafilter" type="checkbox" name="lesgoo" checked />
+    <label for="pizzafilter">Pizza</label>
 
+    <ul class="restaurants">
       <li class="Burger">
         <div>
           <a href="burger.html">
@@ -54,7 +54,6 @@
           </a>
         </div>
       </li>
-       
     </ul>
   </body>
 </html>
